--- a/app/app.css
+++ b/app/app.css
@@ -4,10 +4,8 @@
 @custom-variant dark (&:is(.dark *));
 
 @theme {
-  --font-sans: "Inter", ui-sans-serif, system-ui, sans-serif,
-    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  --font-sans: "Noto Sans JP", Roboto, ui-sans-serif, system-ui, sans-serif;
 }
-
 html,
 body {
   @apply bg-white dark:bg-gray-950;
