--- a/app/app.css
+++ b/app/app.css
@@ -6,6 +6,38 @@
 @theme {
   --font-sans: "Noto Sans JP", Roboto, ui-sans-serif, system-ui, sans-serif;
 }
+
+@layer components {
+  .detail {
+    @apply break-all;
+  }
+  .detail p {
+    @apply text-base py-2;
+  }
+  .detail h1 {
+    @apply text-3xl font-bold pt-6 pb-2;
+  }
+  .detail h2 {
+    @apply text-2xl font-bold pt-6 pb-2;
+  }
+  .detail h3 {
+    @apply text-xl font-bold pt-5 pb-2;
+  }
+  .detail h4 {
+    @apply text-lg font-bold pt-5 pb-2;
+  }
+  .detail h5 {
+    @apply text-base font-bold pt-4 pb-2;
+  }
+  .detail h6 {
+    @apply text-sm font-bold pt-4 pb-2;
+  }
+
+  .detail pre code {
+    @apply block bg-gray-900 text-white p-4 rounded-md overflow-x-auto text-sm;
+  }
+}
+
 html,
 body {
   @apply bg-white dark:bg-gray-950;
